--- a/css/style.css
+++ b/css/style.css
@@ -64,6 +64,19 @@ body {
     background-color: white;
     visibility: hidden;
 }
+.mob-menu {
+    display: none; /* Varsayılan olarak gizli */
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    background-color: white;
+    z-index: 1000;
+  }
+  .mob-menu.active {
+    display: block; /* JavaScript ile açıldığında görünür olacak */
+  }
 .mob-menu .is-open{
     position: fixed;
     top:0;
